﻿2010-03-31  Antonello Provenzano  <antonello@deveel.com>
	* DbDirectAccess.cs:
		- *Command methods changed to *Statement
		- methods arguments changed from DirectCommand to
		Statement type
	
2010-03-08  Antonello Provenzano  <antonello@deveel.com>
	* DbConfig.cs: modified to accomodate the instatiation
	of a 'default' configuration set (DefaultDbConfig class
	removed).
	* DbController.cs: added overloaded method 'Create' that
	accepts just a IDbConfig instance (mainly for memory-based
	environments).
	* IDbConfig.cs: introduced method SetValue to make a
	configuration object also writeable
	* ConfigProperty.cs: removed the "Type" property
	
2010-03-05  Antonello Provenzano  <antonello@deveel.com>
	* IDbConfig.cs: method SaveTo now accepts a Stream argument
	instead of the destination file.
	* DbConfig.cs: LoadFromStream and SaveTo methods modified
	to bypass the use of Properties class.
	
2009-11-23  Antonello Provenzano  <antonello@deveel.com>
	* DbController.cs: fixed a bug on the DatabaseExist method.
	
2009-10-29  Antonello Provenzano  <antonello@deveel.com>
	* DbController.cs:
		- implements IDatabaseHandler interface
		- it's possible to create a controller for a given
		path on the file-system
		- Default property now is created on the current
		executing directory.
		- implements IDisposable to dispose every database
		handled.
		- DatabaseExists method now accepts only the name
		argument
		- implementation of ConnectToDatabase to access
		an already created or booted database.
	
2009-10-23  Antonello Provenzano  <antonello@deveel.com>
	* DbSystem.cs: 
		- the IDbConnection returned from method
		GetConnection is now an internal DeveelDbConnection
		instance which is referenced by DbSystem (so that when
		this is closed or disposed all opened connections will 
		be closed accordingly).
		- DbSystem is now disposable: at disposal every connection
		opened through GetConnection method will also be closed.